force-app/main/default/objects/Power_BI_Report_Config__mdt/Power_BI_Report_Config__mdt.object-meta.xml
<CustomObject>
    <label>Power BI Report Config</label>
    <pluralLabel>Power BI Report Configs</pluralLabel>
</CustomObject>