force-app/main/default/objects/Power_BI_Report_Config__mdt/fields/Access_Scope__c.field-meta.xml
<CustomField>
    <fullName>Access_Scope__c</fullName>
    <label>Access Scope</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>