force-app/main/default/objects/Power_BI_Report_Config__mdt/fields/Report_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Report_URL_2__c</fullName>
    <label>Report URL 2</label>
    <type>TextArea</type>
</CustomField>