force-app/main/default/objects/Power_BI_Report_Config__mdt/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <label>Report URL</label>
    <type>TextArea</type>
</CustomField>